==> aabzel/trunk/source/mcal/mcal_stm32f4/uart/uart_mcal.c <==
#include "uart_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "bit_utils.h"
#include "code_generator.h"
#include "hal_diag.h"
#include "heap_allocator.h"
#include "log.h"
#include "stm32f4xx_hal.h"
#include "time_mcal.h"
#include "uart_custom_types.h"
#include "timer_mcal.h"
#include "cli_config.h"
#include "string_reader.h"
#include "sys_config.h"

bool uart_init_one(uint8_t num) {
    bool res = false;
    UartHandle_t* Node = UartGetNode(num);
    if(Node) {
        const UartConfig_t* Config = UartGetConfig(num);
        if(Config) {

            res=uart_init_general_one(Config, Node);

            // res=fifo_init(&Node->TxFifo, Node->tx_array, UART_TX_FIFO_SIZE);
            Node->rx_buff = (volatile uint8_t*)&rx_buff[num][0];
            Node->rx_buff_size = 1;
            LOG_WARNING(UART, "UART%u Init %u Bit/s", num, Config->baud_rate);
            Node->uart_h.Init.BaudRate = Config->baud_rate;
            Node->uart_h.Init.HwFlowCtl = UART_HWCONTROL_NONE;
            Node->uart_h.Init.Mode = UART_MODE_TX_RX;
            Node->uart_h.Init.OverSampling = UART_OVERSAMPLING_16;
            Node->uart_h.Init.Parity = UART_PARITY_NONE;
            Node->uart_h.Init.StopBits = UART_STOPBITS_1;
            Node->uart_h.Init.WordLength = UART_WORDLENGTH_8B;
            Node->uart_h.Instance = UartGetBase(num);
            if(Node->uart_h.Instance) {
                HAL_StatusTypeDef ret = HAL_ERROR;
                ret = HAL_UART_Init(&Node->uart_h);
                if(HAL_OK != ret) {
                    res = false;
                    LOG_ERROR(UART, "%u init Err", num);
                } else {
                    res = true;
                    LOG_INFO(UART, "%u init Ok", num);
                    Node->init_done = true;
                }
                ret = HAL_UART_Receive_IT(&Node->uart_h, (uint8_t*)Node->rx_buff, 1);
                if(HAL_OK != ret) {
                    res = false;
                }
                char str[40] = "UART";
                uart_mcal_send(num, (uint8_t*)str, 4);
                snprintf(str, sizeof(str), "UART%u", num);
                size_t len = strlen(str);
                uart_mcal_send(num, (uint8_t*)str, len);
            }
        }
    }
    return res;
}
