==> aabzel/trunk/source/mcal/mcal_at32f4/uart/uart_mcal.c <==
#include "uart_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "bit_utils.h"
#include "fifo_char.h"
#include "hal_diag.h"
#include "log.h"
#include "microcontroller_const.h"
#include "time_mcal.h"
#include "uart_custom_drv.h"
#include "uart_custom_types.h"
#include "uart_types.h"
#include "dma_mcal.h"
#include "heap_allocator.h"
#include "timer_mcal.h"
#include "string_reader.h"
#include "microcontroller_const.h"

bool uart_init_one(uint8_t num) {
    bool res = false;
    const UartConfig_t* Config = UartGetConfig(num);
    if(Config) {
        UartHandle_t* Node = UartGetNode(num);
        if(Node) {
            res = uart_init_common_one(Config, Node);

            if(false == Node->RxFifo.initDone) {
                LOG_WARNING(UART, "RxFiFoInitLack");
            }

            if(Config->rx_buff_size) {
                if(Config->RxFifoArray) {
                    res = fifo_init(&Node->RxFifo, (char*)Config->RxFifoArray, (uint16_t)Config->rx_buff_size);
                }
            }

            if(Config->tx_buff_size) {
                if(Config->TxFifoArray) {
                    res = fifo_init(&Node->TxFifo, (char*)Config->TxFifoArray, (uint16_t)Config->tx_buff_size);
                }
            }

            // res=fifo_init(&Node->TxFifo, Node->tx_array, UART_TX_FIFO_SIZE);
            Node->rx_buff = (volatile uint8_t*)&rx_buff[num][0];
            Node->rx_buff_size = 1;
            LOG_WARNING(UART, "UART%u Init %u Bit/s", num, Config->baud_rate);
            UartInfo_t* Info = UartGetInfo(num);
            if(Info) {
                Node->UARTx = Info->UARTx;
                crm_periph_clock_enable(Info->clock_type, TRUE);
                NVIC_SetPriority(Info->irq_n, 7);
                NVIC_EnableIRQ(Info->irq_n);
                nvic_irq_enable(Info->irq_n, 7, 7);

                usart_init(Info->UARTx, Config->baud_rate, USART_DATA_8BITS, USART_STOP_2_BIT);
                usart_transmitter_enable(Info->UARTx, TRUE);
                usart_receiver_enable(Info->UARTx, TRUE);
                usart_interrupt_enable(Info->UARTx, USART_RDBF_INT, TRUE);
#ifdef HAS_DMA
                if(Config->dma.tx) {
                    usart_dma_transmitter_enable(Info->UARTx, TRUE);
                } else {
                    usart_dma_transmitter_enable(Info->UARTx, FALSE);
                }

                if(Config->dma.rx) {
                    usart_dma_receiver_enable(Info->UARTx, TRUE);
                } else {
                    usart_dma_receiver_enable(Info->UARTx, FALSE);
                }
#endif /*HAS_DMA*/

                usart_enable(Info->UARTx, TRUE);

                // usart_interrupt_enable(Info->UARTx, USART_TDBE_INT, TRUE); // err
                // usart_interrupt_enable(Info->UARTx, USART_TDC_FLAG, TRUE); // err

                Node->init_done = true;
                char str[40] = "UART";
                uart_mcal_send(num, (uint8_t*)str, 4);
                snprintf(str, sizeof(str), "UART%u", num);
                size_t len = strlen(str);
                uart_mcal_send(num, (uint8_t*)str, len);
                res = true;
                LOG_INFO(UART, "%u init Ok", num);
                log_level_get_set(UART, LOG_LEVEL_INFO);
            }
        }
    }
    return res;
}
